--- a/webapp/view/pages/contato.html
+++ b/webapp/view/pages/contato.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Contato</title>
-    <link rel="stylesheet" href="stylec.css"/>
+    <link rel="stylesheet" href="../styles/stylec.css"/>
+    <link rel="stylesheet" href="../styles/rodape.css"/>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anta&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
@@ -13,9 +14,9 @@
 <body>
     <nav id="menu">
         <ul type="none">
-            <li><a href="home.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="sobre.html">SOBRE</a></li>
-            <li><a href="home.html">BLOG</a></li>
+            <li><a href="blogs.jsp">BLOG</a></li>
             <li><a href="contato.html">CONTATO</a></li>
         </ul>
     </nav>
@@ -43,35 +44,45 @@
                 <p>Rua Presidente Dutra, Guarulhos, SP, Brasil Nº 120</p>
             </div>
             <div>
-                <img id="imagem" src="/projeto/imagens/local.png" alt="Local">
+                <img id="imagem" src="../imagens/local.png" alt="Local">
             </div>
         </section>
     </main>
 
-    <footer id="rodape">
-        <section id="um">
-            <h1>Projetos Sociais:</h1>
-            <p>
-                Farmácia comunitária<br/>
-                Viva leite<br/>
-                Educacional<br/>
-                Cursos preparatórios<br/>
-                Social
-            </p>
-        </section>
-        <section id="dois">
-            <h1>ONG LAR FELIZ DA SOFIA</h1>
-            <img src="/projeto/imagens/rodape.jpg" alt="rodapé"/>
-        </section>
-        <section>
-            <h1>Fale conosco:</h1>
-            <p>
-                Telefone: (11) 4378-0519<br/>
-                email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRzBlBmjblHFGGhkRnksmqstZTLtCqBVpXDWFTFlgZwpJRXVGMvrdffDBpbFRHCwQkqVxFtC">ongdasofia2050@hotmail.com</a><br/>
-                Endereço: Rua Presidente Dutra Nº 120<br/>
-                Vila São Gabriel - SP
-            </p>
-        </section>
-    </footer>
+    <footer class = "footer">
+        <div class="footer-container">
+      
+          <div class="footer-section">
+            <h3>Projetos Sociais:</h3>
+            
+            <ul>
+		      <li>Farmácia Comunitária</li>
+		      <li>Viva Leite</li>
+		      <li>Educacional</li>
+		      <li>Cursos Preparatórios</li>
+		      <li>Social</li>
+		    </ul>
+          
+          </div>
+      
+          <div class="footer-center">
+            <img src="../imagens/rodape.jpg" alt="Logo da ONG" class="footer-img">
+            <h2 class="footer-title">ONG LAR FELIZ DA SOFIA</h2>
+          </div>
+      
+          <div class="footer-section">
+            <h3>Contato</h3>
+            <p>Email:ongdasofia2050@hotmail.com</p>
+            <p>Telefone: (11)4378-0519</p>
+            <p>Endereço: Rua Presidente Dutra n°120  
+                Vila São Gabriel - SP</p>
+          </div>
+      
+        </div>
+      
+        <div class="footer-copy">
+          <p>© 2025 - Todos os direitos reservados.</p>
+        </div>
+      </footer>
 </body>
 </html>
