--- a/webapp/view/pages/sobre.html
+++ b/webapp/view/pages/sobre.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel = "stylesheet" href = "../styles/rodape.css" />
     <title>Sobre</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anta&display=swap');
@@ -13,9 +14,9 @@
 <body>
     <nav id="menu">
         <ul type="none">
-            <li><a href="home.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="sobre.html">SOBRE</a></li>
-            <li><a href="home.html">BLOG</a></li>
+            <li><a href="blogs.jsp">BLOG</a></li>
             <li><a href="contato.html">CONTATO</a></li>
         </ul>
     </nav>
@@ -34,30 +35,40 @@
         </section>
     </main>
 
-    <footer id="rodape">
-        <section id="um">
-            <h1>Projetos Sociais:</h1>
-            <p>
-                Farmácia comunitária<br/>
-                Viva leite<br/>
-                Educacional<br/>
-                Cursos preparatórios<br/>
-                Social
-            </p>
-        </section>
-        <section id="dois">
-            <h1>ONG LAR FELIZ DA SOFIA</h1>
-            <img src="/projeto/imagens/rodape.jpg" alt="rodapé"/>
-        </section>
-        <section>
-            <h1>Fale conosco:</h1>
-            <p>
-                Telefone: (11) 4378-0519<br/>
-                email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRzBlBmjblHFGGhkRnksmqstZTLtCqBVpXDWFTFlgZwpJRXVGMvrdffDBpbFRHCwQkqVxFtC">ongdasofia2050@hotmail.com</a><br/>
-                Endereço: Rua Presidente Dutra Nº 120<br/>
-                Vila São Gabriel - SP
-            </p>
-        </section>
-    </footer>
+    <footer class = "footer" >
+        <div class="footer-container">
+      
+          <div class="footer-section">
+            <h3>Projetos Sociais:</h3>
+            
+            <ul>
+		      <li>Farmácia Comunitária</li>
+		      <li>Viva Leite</li>
+		      <li>Educacional</li>
+		      <li>Cursos Preparatórios</li>
+		      <li>Social</li>
+		    </ul>
+          
+          </div>
+      
+          <div class="footer-center">
+            <img src="../imagens/rodape.jpg" alt="Logo da ONG" class="footer-img">
+            <h2 class="footer-title">ONG LAR FELIZ DA SOFIA</h2>
+          </div>
+      
+          <div class="footer-section">
+            <h3>Contato</h3>
+            <p>Email:ongdasofia2050@hotmail.com</p>
+            <p>Telefone: (11)4378-0519</p>
+            <p>Endereço: Rua Presidente Dutra n°120  
+                Vila São Gabriel - SP</p>
+          </div>
+      
+        </div>
+      
+        <div class="footer-copy">
+          <p>© 2025 - Todos os direitos reservados.</p>
+        </div>
+      </footer>
 </body>
 </html>
