--- a/webapp/view/styles/blogs.css
+++ b/webapp/view/styles/blogs.css
@@ -1,9 +1,32 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+#menu ul li {
+    display: inline;
+}
+
+#menu ul li a {
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+}
+
+#menu ul li a:hover {
+    background-color: #5FEBF5;
+    box-shadow: 0 0 15px black;
+    border: 1px solid black;
+}
+
 body {
     background-color: #E2EAFE;
     font-family: "rubik";
+}
+
+.titleEmpty {
+	font-family: "anta";
 }
 
 .algnPosts {
